--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -13,5 +13,5 @@ jobs:
         run: |
           pip install -r requirements.txt
           python train.py
-          #cat metrics.txt >> report.md
+          cat metrics.txt >> report.md
           #cml-send-comment report.md
